removed insult enter keypress bug. prevented next field jump on data select

--- a/Mug-form/css/component.css
+++ b/Mug-form/css/component.css
@@ -13,8 +13,8 @@
 /* Title */
 .fs-title {
 	position: absolute;
-	top: 0;
-	left: 0;
+	top: 55%;
+	left: 25%;
 	margin: 0;
 	padding: 40px;
 	width: 100%;
